--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ body {
   font-size: 25px;
 }
 button {
-height: 20px;
-width: fit-content;
+  font-size: 1em;
+}
+select {
+  font-size: 1em;
+  padding: 5px;
 }
 .containerAll {
   display: grid;
@@ -60,13 +63,19 @@ width: fit-content;
   grid-column: 1/4;
 }
 .containerLeft {
-  padding-left: 20px;
+  padding-left: 30%;
   grid-row: 2;
   grid-column: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-bottom: 40px;
 }
 .containerRight {
   grid-row: 2;
