--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ select {
   height: 150px;
   width: 150px;
   border: 5px black solid;
-  gap: 0;
+  font-size: 5em;
+  text-align: center;
 }
 .a {
   grid-column: 1;
